Updated resume, and add projects

--- a/public/index.html
+++ b/public/index.html
@@ -6,20 +6,20 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Kevin't portfolio website." />
+  <meta name="description" content="Jaehan't portfolio website." />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Kevin's Portfolio</title>
-  <meta name="description" content="Kevin's portfolio website">
+  <title>Jaehan's Portfolio</title>
+  <meta name="description" content="Jaehan's portfolio website">
 
   <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="Kevin | Portfolio">
+  <meta itemprop="name" content="Jaehan | Portfolio">
   <meta itemprop="image" content="../src/Assets/Preview_Img.png">
 
   <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://kevin-kim.netlify.app/">
+  <meta property="og:url" content="https://jaehan-kim.netlify.app/">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Kevin | Portfolio">
-  <meta property="og:description" content="Kevin't portfolio website.">
+  <meta property="og:title" content="Jaehan | Portfolio">
+  <meta property="og:description" content="Jaehan't portfolio website.">
   <meta property="og:image" content="../src/Assets/Preview_Img.png">
 
 
